# Cub3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  cub3d  cub3d.c  cub3d.h  drawing3d.c  findRayAttr.c  find_positions.c  garbage.c  get_next_line.c  get_next_line_utils.c  ha.txt  hooks.c  main.c  minimap.c  norm  o.txt  parsing.c  test.sh
Lib42/: Makefile
Lib42/gnl/: get_next_line.c  get_next_line_utils.c
Lib42/includes/: gnl.h  libft.h
Lib42/libft/: ft_error.c  ft_strlen.c
includes/: checks.h  cub3d.h  graphics.h  parsing.h  structs.h  utils.h
lib42/: Makefile
lib42/get_next_line/: get_next_line.c  get_next_line_exit.c  get_next_line_utils.c
lib42/include/: libft.h
lib42/libft/: ft_atoi.c  ft_charjoin.c  ft_error.c  ft_putchar_fd.c  ft_split.c
maps/: easy.cub
maps/invalid_maps/: duplicated_orientation.cub  missing_player.cub  missing_textures.cub  multiple_players.cub  not_surrounded.cub  trash_text.cub  wrong_extention.cu  wrong_order.cub
maps/valid_maps/: SF_01.cub  SF_02.cub  SF_03.cub  anna.cub  cosmos.cub  diff_order.cub  donut_map.cub  double_extention.cub.cub  huge_map.cub  mixed_data.cub  simple_small.cub  spaces.cub  subject_exemple.cub
src/anna/: cub3d.c  find_positions.c  garbage.c  parsing.c
src/calculations/: positive_double.c
src/checkers/: check_data.c  check_map.c  check_paths.c
src/graphics/: adding_textures.c  draw_map.c  drawing3d.c  find_coordinates.c  images.c  load_walls.c  minimap.c
src/hooks/: hooks.c  move.c  rotate.c
src/images/: images.c
src/parsing/: parse_map.c  parse_map2.c  parse_textures.c  parse_textures2.c  parsing.c  parsing2.c
src/raycasting/: findRayAttr.c  positive_double.c  raycasting.c
src/utils/: all_digits.c  clean_up.c  copy_file.c  empty_line.c  first_map_line.c  free.c  init_cub.c  print_data.c  remove_new_line.c  rgba.c
testers/: test.sh  test_parser.c
